# mupr_amazing_animaton

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  index.css  index.html  index.js  mupr_animation.js  wasm_bindgen_paint.js
node/: package.json
node/src/: index.html  index.js
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
rust_src/: Cargo.toml
src/: lib.rs
web_root/: index.html
